src/globalStyles/scss/index.scss
@import url("~reset-css");

@import "./variables";
@import "./utils";
@import "./components";

@import url('https://fonts.cdnfonts.com/css/yukarimobile');
// @import url('//fonts.googlea pis.com/css?family=Oswald');
// @import url('//fonts.googleapis.com/css?family=Oswald');
// @import url('//fonts.cdnfonts.com/css/coda-caption');

@import url("https://p.typekit.net/p.css?s=1&k=axf3cfh&ht=tk&f=25310.25311.25312.25313&a=312565&app=typekit&e=css");

@font-face {
  font-family:"industry";
  src:url("https://use.typekit.net/af/44c438/00000000000000007735a64e/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"),url("https://use.typekit.net/af/44c438/00000000000000007735a64e/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"),url("https://use.typekit.net/af/44c438/00000000000000007735a64e/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
  font-display:auto;font-style:normal;font-weight:700;
}

@font-face {
  font-family:"industry";
  src:url("https://use.typekit.net/af/94f9bd/00000000000000007735a64f/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("woff2"),url("https://use.typekit.net/af/94f9bd/00000000000000007735a64f/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("woff"),url("https://use.typekit.net/af/94f9bd/00000000000000007735a64f/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("opentype");
  font-display:auto;font-style:italic;font-weight:700;
}

@font-face {
  font-family:"industry";
  src:url("https://use.typekit.net/af/08fe52/00000000000000007735a650/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/08fe52/00000000000000007735a650/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/08fe52/00000000000000007735a650/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
  font-display:auto;font-style:normal;font-weight:400;
}

@font-face {
  font-family:"industry";
  src:url("https://use.typekit.net/af/79952e/00000000000000007735a651/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff2"),url("https://use.typekit.net/af/79952e/00000000000000007735a651/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff"),url("https://use.typekit.net/af/79952e/00000000000000007735a651/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("opentype");
  font-display:auto;font-style:italic;font-weight:400;
}

.tk-industry { font-family: "industry",sans-serif; }


html {
  max-width: 100vw;
  overflow-x: hidden;
  overflow-y: scroll; /* has to be scroll, not auto */
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
}

body {
  font-family: "industry";
  font-size: $base-font-size;
  line-height: $base-line-height;
  color: $base-font-color;
  overflow-x: hidden;
  margin-right: calc(-1 * (100vw - 100%));

  * {
    box-sizing: border-box;
  }

  h1 {
    font-size: $h1-font-size;
    line-height: $h1-line-height;
  }

  h3 {
    font-size: $h3-font-size;
    line-height: 1.7rem;
  }

  h4 {
    font-size: $h4-font-size;
  }

  a {
    text-decoration: none;
    font-weight: normal;
    color: inherit;
  }

  p {
    line-height: 1.5rem;
  }

  strong {
    font-weight: $bold-font-weight;
  }

  em {
    font-style: italic;
  }

  #root {
    display: flex;
    min-height: 100vh;
    flex-direction: column;

    & > div:first-of-type {
      flex: 1;
    }
  }

  .container {
    width: $container-width;
    max-width: 100vw;
    margin: 0 auto;
    padding: 0 $spacer;

    @media (max-width: $medium-screen) {
      width: 100%;
    }
  }

  table {
    width: 100%;
    margin: $spacer * 3 0;
    font-size: $small-font-size;

    th {
      color: $gray-dark;
      text-align: left;
      padding: $spacer $spacer / 2;
    }

    tr {
      color: $base-font-color;
      border-bottom: 1px solid $gray-light;
    }

    td {
      padding: $spacer $spacer / 2;
      vertical-align: middle;

      img {
        vertical-align: middle;
        margin-right: $spacer;
      }
    }
  }

  .checkbox {
    position: relative;
    display: inline;

    &:before {
      content: "";
      display: block;
      position: absolute;
      left: 0.4rem;
      top: 0.05rem;
      width: 0.3rem;
      height: 0.6rem;
      border: solid $white;
      border-width: 0 2px 2px 0;
      transform: rotate(45deg);
      z-index: 1;
    }

    input {
      display: none;

      &:checked ~ span {
        &:before {
          background-color: $blue;
        }
      }
    }

    span {
      margin-left: $spacer * 2;

      &:before {
        background-color: $white;
        border-radius: 0.2rem;
        border: 1px solid $blue;
        content: "";
        display: block;
        height: 1rem;
        position: absolute;
        top: 0;
        width: 1rem;
      }
    }
  }
}

.form-error {
  color: $rose;
}

.slick-slide img {
  max-height: 75px;
  display: inline !important;
  max-width: 150px;
}

.slick-next, .slick-prev {
  @media screen and (max-width: 750px) {
    display: none;
  }
}

.slider-control-bottomcenter {
  width: 100%;
  bottom: -30px!important;
}

.noscroll {
  height: 100vh;
  overflow: hidden;
}

.rtf {
  right: 10px!important;
  bottom: 10px!important;
  z-index: 4!important;

  @media screen and (max-width: 750px) {
    right: -3%!important;
    bottom: -1%!important;
  }
}

.rtf--mb {
  z-index: 4!important;
  @media screen and (max-width: 750px) {
    height: 45px!important;
    width: 45px!important;
  }
}

.button-arrow {
  z-index: 4!important;
  position: fixed;
  right: 30px;
  height: 30px;
  width: 30px;
  z-index: 9999;
  background-color: rgb(80, 200, 120);
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  outline: none;
  padding: 0;
  -webkit-user-drag: none;
  font-weight: 700;
  color: #f1f1f1;
  font-size: 18px;
}

#age-confirm {

  display:none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #002646;
  font-family: industry, -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
  font-weight: 300;
  color: #fff;
  z-index: 999;

  &.active {
    display: block;
    .hero {
      display: flex !important;
    }
  }
  
  h1 {
    font-family: Yukarimobile, -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
    font-size: 2.5rem;
  }
  
  button {
    background: #66B1E1;
    border: 0;
    padding: 20px 40px;
    color: #fff;
    font-size: 1rem;
    letter-spacing: 1px;
  }
  
  section.place {
    max-width: 600px;
    margin: 0 auto;
    padding: 50px;
    display: flex;
    text-align: center;
  }
  
  section.place img {
    max-width: 100%;
  }
  
  section.hero {
    max-width: 1100px;
    margin: 0 auto;
    padding: 50px;
    display: flex;
    flex-wrap: wrap;
  }
  
  section.hero .brandmark {
    flex: 1;
  }
  
  section.hero .brandmark img {
    max-width: 500px;
  }
  
  section.hero .content {
    flex: 1;
    padding: 100px 0 0 100px;
  }
  
  section.hero .content h1 {
    text-transform: lowercase;
  }
  
  section.hero .content button {
    margin-top: 10px;
  }
  
  section.hero .content a.decline {
    color: #fff;
    margin-left: 25px;
  }
  
  @media only screen and (min-width: 901px) and (max-width: 1100px) {
      
      section.hero .brandmark {
      flex: 1;
    }
    
    section.hero .brandmark img {
      max-width: 100%;
    }
    
    section.hero .content {
      flex: 1;
      padding: 100px 0 0 50px;
    }
    
  }
  
  @media only screen and (max-width: 900px) {
    
    section.hero {
      padding: 20px;
    }
    
    h1 {
      font-size: 1.75rem;
    }
    
      section.hero .brandmark {
      flex: 0 0 100%;
      text-align: center;
    }
    
    section.hero .brandmark img {
      max-width: 100%;
    }
    
    section.hero .content {
      text-align: center;
      flex: 0 0 100%;
      padding: 0px 0 0 0px;
    }
    
  }
}

.iiz {
  img.iiz__img {
    max-height: 2000px;
    @media (max-width: 540px) {
      max-height: 500px;
    }
  }
}

